--- a/s3tool/package.json
+++ b/s3tool/package.json
@@ -11,6 +11,7 @@
     "@oclif/config": "^1.15.1",
     "@oclif/plugin-help": "^3.1.0",
     "aws-sdk": "^2.690.0",
+    "rxjs": "^6.5.5",
     "tslib": "^1.13.0"
   },
   "devDependencies": {
